--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,7 @@
 @media only screen and (max-width: 1250px), only screen and (max-height: 800px) {
     .container{
         height: 100%;
+        height: 100vh;
         width: 100%;
         border-radius: 0px;
     }
@@ -31,6 +32,7 @@
     }
     .ctn-menu-responsive{
         display: flex !important;
+        background-color: black;
     }
     .ctn-info{
         width: 100%;
@@ -50,13 +52,16 @@
 }
 
 @media only screen and (max-width: 860px){
+    .ctn-info{
+        height: 100%;
+    }
     .ctn-subtitle{
         flex-direction: column;
         align-items: center;
         gap: 15px;
         padding-bottom: 30px;
     }
-    .sub-ctn-right-datos, .ctn-skills{
+    .sub-ctn-right-datos, .ctn-skills,.ctn-datos-personales{
         width: 100%;
     }
     .sub-title{
@@ -68,6 +73,7 @@
         flex-direction: column-reverse;
         align-items: center;
         gap: 20px;
+        padding: 0;
     }
 
     .ctn-descripcion-datos{
@@ -79,5 +85,8 @@
         padding: 0;
         max-width: 410px;
         position: static;
+    }
+    .item-info{
+        width: 56%;
     }
 }
