--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,9 @@
 @media only screen and (max-width: 1250px), only screen and (max-height: 800px) {
+    body, html{
+        height: 100%;
+    }
     .container{
         height: 100%;
-        height: 100vh;
         width: 100%;
         border-radius: 0px;
     }
