--- a/css/styles.css
+++ b/css/styles.css
@@ -432,7 +432,7 @@ h3{
     width: 48%;
     text-align: justify;
     /* max-width: 465px; */
-    color: rgb(189, 189, 189);
+    color: var(--white);
     font-size: 12px;
     line-height: 15px;
     font-family: poppins-regular;
@@ -517,14 +517,14 @@ h3{
 .item-fecha .year-location{
     font-size: 12px;
     font-family: poppins-medium;
-    color: #CCCCCC;
+    color: var(--white-one);
     text-decoration: underline;
 }
 
 .item-fecha .info{
     font-size: 12px;
     font-family: poppins-medium;
-    color: #CCCCCC;
+    color: var(--white-one);
 }
 
 
@@ -545,7 +545,6 @@ h3{
 .item-info .info-txt span{
     font-family: poppins-medium;
     color: var(--white);
-    opacity: 0.6;
     font-size: 12px;
 }
 
