--- a/css/styles.css
+++ b/css/styles.css
@@ -791,25 +791,67 @@ h3{
 /* Generales */
 
 /* CONTENEDOR CERTIFICADOS */
+#certificado-content .sub-ctn-ambos h2{
+    width: 100%;
+}
 #certificado-content .sub-ctn-ambos{
     flex-direction: column;
+    align-items: center;
+    gap: 30px;
 }
 
 .ctn-certificados{
     display: flex;
-    flex-direction: column;
+    width: 800px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 50px;
 }
 
 .certificado-item{
     display: flex;
-    width: 300px;
+    width: 350px;
     height: 150px;
     border: 1px solid var(--white-two);
     gap: 1px;
+    border-radius: 15px;
+    overflow: hidden;
 }
+
 .certificado-item-img{
-    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--white-two);
+    width: 45%;
+    height: 100%;
+}
+.certificado-item-img img{
+    object-fit:cover;
+    height: 100%;
+    width: 100%;
 }
 .certificado-item-info{
-    width: 60%;
+    width: 55%;
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.certificado-item-info p{
+    color: var(--white);
+}
+.certificado-item-info .txt-title{
+    font: 14px Poppins-Bold;
+    line-height: 15px;
+}
+.certificado-item-info .txt-subtitle{
+    font: 14px Poppins-Medium;
+    opacity: 0.6;
+    line-height: 15px;
+}
+.certificado-item-info .txt-fecha{
+    font: 14px poppins-ligth;
+    opacity: 0.6;
 }
