cambios en contacto

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -76,7 +76,7 @@
         gap: 15px;
         padding-bottom: 10px;
     }
-    .sub-ctn-right-datos, .ctn-skills,.ctn-datos-personales{
+    .sub-ctn-right-datos, .ctn-skills{
         width: 100%;
     }
     .sub-title{
