--- a/css/styles.css
+++ b/css/styles.css
@@ -429,12 +429,13 @@ h3{
     gap: 10px;
 }
 .sub-title{
-    width: 48%;
+    padding: 0 3px ;
+    width: 100%;
     text-align: justify;
     /* max-width: 465px; */
     color: var(--white);
-    font-size: 12px;
-    line-height: 15px;
+    font-size: 14px;
+    line-height: 20px;
     font-family: poppins-regular;
 }
 .ctn-education{
@@ -584,32 +585,6 @@ h3{
     box-sizing: border-box;
     align-items: center;
     justify-content: center;
-}
-
-.ctn-datos-personales{
-    width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.datos-personales{
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-.datos-personales .dp-txt{
-    color: var(--white-one) !important;
-    font-size: 13px;
-}
-
-.datos-personales .dp-txt span{
-    font-family: poppins-bold;
-    margin-right:10px;
-    color: var(--blue-two);
-    font-size: 13px;
 }
 
 /* barras */
@@ -807,7 +782,7 @@ h3{
     padding: 0 30px;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 40px;
 }
 
 .certificado-item{
@@ -816,7 +791,7 @@ h3{
     height: 150px;
     border: 1px solid var(--white-two);
     gap: 1px;
-    border-radius: 15px;
+    border-radius: 10px;
     overflow: hidden;
 }
 
@@ -856,4 +831,26 @@ h3{
 .certificado-item-info .txt-fecha{
     font: 14px poppins-ligth;
     opacity: 0.6;
+}
+
+
+/* CONTACTO */
+#contacto-content .sub-ctn-ambos p{
+    color: white;
+}
+
+.ctn-datos-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 150px;
+    border: 1px solid white;
+}
+.datos-item-svg svg{
+    fill: white;
+}
+.datos-item-txt{
+    color: white;
 }
