--- a/css/styles.css
+++ b/css/styles.css
@@ -366,16 +366,22 @@ h3{
     justify-content: space-between;
     /* height: 12%; */
     width: 100%;
-    border-bottom: 1px dotted var(--white-one);
+    /* border-bottom: 1px dotted var(--white-one); */
+    border-bottom: 1px dotted var(--blue-two);
     font-size: 40px;
-    font-family: poppins-medium;
-    color: var(--white-one);
+    font-family: poppins-bold;
+    /* color: var(--white-one); */
+    color: var(--blue-two);
+    text-shadow:         0 0 10px rgba(4, 122, 224, 0.5),
+    0 0 20px rgba(4, 122, 224, 0.3),
+    0 0 30px rgba(4, 122, 224, 0.2);
 }
 
 .sub-ctn-ambos{
     width: 100%;
     display: flex;
     height: 88%;
+    gap: 30px;
     box-sizing: border-box;
     padding: 15px 0 0 0;
     overflow-y: auto;
@@ -794,7 +800,7 @@ h3{
     display: flex;
     width: 350px;
     height: 150px;
-    border: 1px solid var(--white-two);
+    border: 1px solid var(--blue-two);
     gap: 1px;
     border-radius: 10px;
     overflow: hidden;
@@ -804,7 +810,7 @@ h3{
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid var(--white-two);
+    border-right: 1px solid var(--blue-two);
     width: 45%;
     height: 100%;
 }
@@ -850,12 +856,61 @@ h3{
     align-items: center;
     justify-content: center;
     width: 300px;
-    height: 150px;
-    border: 1px solid white;
+    height: 110px;
+    border: 1px solid var(--blue-two);
+    border-radius: 6px;
 }
 .datos-item-svg svg{
     fill: white;
 }
 .datos-item-txt{
     color: white;
+}
+
+.ctn-datos{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    width: 45%;
+}
+
+.glow {
+    filter: drop-shadow(0 0 10px rgba(4, 122, 224, 0.5)) drop-shadow(0 0 20px rgba(4, 122, 224, 0.3)) drop-shadow(0 0 30px rgba(4, 122, 224, 0.2));
+}
+.contact-form{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    width: 45%;
+}
+#contact-form{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+#contact-form input, textarea{
+    padding: 7px 15px;
+    background-color: transparent;
+    border: 1px solid var(--blue-two);
+    color: white;
+    border-radius: 6px;
+}
+
+#contact-form input:focus{
+    border: 1px solid var(--blue-two);
+    box-shadow: 0 0 10px rgba(4, 122, 224, 0.5), 0 0 20px rgba(4, 122, 224, 0.3), 0 0 30px rgba(4, 122, 224, 0.2);
+}
+
+#contact-form button{
+    padding: 7px;
+    background-color: transparent;
+    border: 1px solid var(--blue-two);
+    color: var(--blue-three);
+    font: 18px poppins-medium;
+    cursor: pointer;
+}
+
+#contact-form button:hover{
+    text-shadow: 0 0 10px rgba(4, 122, 224, 0.5), 0 0 20px rgba(4, 122, 224, 0.3), 0 0 30px rgba(4, 122, 224, 0.2);
+    box-shadow: 0 0 10px rgba(4, 122, 224, 0.5), 0 0 20px rgba(4, 122, 224, 0.3), 0 0 30px rgba(4, 122, 224, 0.2);
 }
