--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,8 +3,9 @@
         height: 100%;
     }
     .container{
-        height: 100%;
+        height: 98%;
         width: 100%;
+        max-width: 1250px;
         border-radius: 0px;
     }
     .ctn-menu{
@@ -15,9 +16,6 @@
     }
 }
 @media only screen and (max-width: 1150px), only screen and (max-height: 720px) {
-    .animated-bg{
-        display: none;
-    }
     .container{
         flex-direction: row-reverse;
         position: relative;
