--- a/css/responsive.css
+++ b/css/responsive.css
@@ -23,6 +23,16 @@
     h3{
         font-size: 18px;
     }
+    .ctn-datos{
+        gap: 10px;
+        align-items: center;
+        width: 45%;
+    }
+    .ctn-datos-item {
+        width: 235px;
+        height: 88px;
+        border-radius: 6px;
+    }
     .sub-title{
         font-size: 13px;
     }
