--- a/css/responsive.css
+++ b/css/responsive.css
@@ -35,6 +35,7 @@
     }
     .sub-title{
         font-size: 13px;
+        line-height: 16px;
     }
     .ctn-menu-img img{
         border-radius: 8px 8px 0 0;
