rellenado el contacto

--- a/css/styles.css
+++ b/css/styles.css
@@ -339,38 +339,21 @@ h3{
     
 }
 
-.ctn-inicio h1, .ctn-inicio p {
-    position: relative;
-    z-index: 1;
-    font-size: 72px;
-    font-weight: bold;
-    color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
+.ctn-inicio h1, .ctn-inicio p{
+    color: var(--white-one);
+    text-shadow:         0 0 10px rgba(4, 122, 224, 0.5),
+    0 0 20px rgba(4, 122, 224, 0.3),
+    0 0 30px rgba(4, 122, 224, 0.2);
 }
 
 .ctn-inicio h1{
     font-size: 50px;
-    /* color: var(--white-one); */
     font-family: poppins-bold;
 }
 
 .ctn-inicio p{
     font-size: 24px;
     font-family: poppins-medium;
-    /* color: #aaa; */
-}
-
-.video-background {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: 0;
-    pointer-events: none; /* Para asegurarse de que el video no interfiera con la interacción del usuario */
 }
 
 .sub-contenedor{
