--- a/css/styles.css
+++ b/css/styles.css
@@ -873,7 +873,8 @@ h3{
     border-radius: 6px;
 }
 
-#contact-form input:focus{
+#contact-form input:focus, #contact-form textarea:focus{
+    outline: none;
     border: 1px solid var(--blue-two);
     box-shadow: 0 0 10px rgba(4, 122, 224, 0.5), 0 0 20px rgba(4, 122, 224, 0.3), 0 0 30px rgba(4, 122, 224, 0.2);
 }
