--- a/css/styles.css
+++ b/css/styles.css
@@ -860,6 +860,26 @@ h3{
     gap: 25px;
     width: 45%;
 }
+.input-container label {
+    position: absolute;
+    top: 10px;
+    left: 15px;
+    background-color: white;
+    padding: 0 5px;
+    color: #999;
+    transition: 0.3s;
+    pointer-events: none;
+}
+.input-container input:focus + label,
+.input-container input:not(:placeholder-shown) + label,
+.input-container textarea:focus + label,
+.input-container textarea:not(:placeholder-shown) + label {
+    top: -10px;
+    left: 15px;
+    font: 12px poppins-medium;
+    color: var(--blue-two);
+}
+            
 #contact-form{
     display: flex;
     flex-direction: column;
