--- a/css/styles.css
+++ b/css/styles.css
@@ -860,6 +860,12 @@ h3{
     gap: 25px;
     width: 45%;
 }
+.input-container {
+    position: relative;
+    margin: 20px 0;
+    width: 100%;
+}
+
 .input-container label {
     position: absolute;
     top: 10px;
@@ -881,11 +887,13 @@ h3{
 }
             
 #contact-form{
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 25px;
 }
 #contact-form input, textarea{
+    width: 100%;
     padding: 7px 15px;
     background-color: transparent;
     border: 1px solid var(--blue-two);
