--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ h3{
     padding: 30px 20px;
     width: 23%;
     justify-content: space-between;
-    border-radius: 20px;
+    border-radius: 20px 0 0 20px;
     box-shadow: 0px 0px 10px black;
     z-index: 1;
     background-color: var(--blue-one);
@@ -120,7 +120,8 @@ h3{
     height: 100%;
     width: 77%;
     border-radius: 0px 20px 20px 0px;
-    background: linear-gradient(to right, var(--blue-one), #101b2a, #0f1823, #0e141d, #0b1016);
+    background-color: #101b2a;
+    /* background: linear-gradient(to right, var(--blue-one), #101b2a, #0f1823, #0e141d, #0b1016); */
 }
 
 .ctn-img-redes{
@@ -870,7 +871,7 @@ h3{
     position: absolute;
     top: 10px;
     left: 15px;
-    background-color: transparent;
+    background-color: #101b2a;
     padding: 0 5px;
     color: var(--blue-two);
     transition: 0.3s;
@@ -882,7 +883,7 @@ h3{
 .input-container textarea:not(:placeholder-shown) + label {
     top: -10px;
     left: 15px;
-    font: 12px poppins-medium;
+    font: 14px poppins-medium;
     color: var(--blue-two);
 }
             
