--- a/css/styles.css
+++ b/css/styles.css
@@ -897,6 +897,7 @@ h3{
 #contact-form input, textarea{
     width: 100%;
     padding: 7px 15px;
+    box-sizing: border-box;
     background-color: transparent;
     border: 1px solid var(--blue-two);
     color: white;
