--- a/css/styles.css
+++ b/css/styles.css
@@ -804,22 +804,45 @@ h3{
     width: 100%;
 }
 .portafolio-item{
+    display: flex;
+    flex-direction: column;
     width: 300px;
-    height: 240px;
+    align-items: center;
+    border-radius: 15px;
+    height: 300px;
+    /* background: #0B1016; */
+    position: relative;
+    border: 1px solid var(--blue-two);
+    box-shadow: 0px 0px 4px rgba(4, 122, 224, 0.5), 0px 0px 8px rgba(4, 122, 224, 0.3), 0px 0px 12px rgba(4, 122, 224, 0.2);
 }
 .portafolio-item .items-img{
-    width: 100%;
+    position: absolute;
+    top: -20px;
+    width: 90%;
+    height: 200px;
 }
 .portafolio-item .items-img img{
     border-radius: 8px;
     width: 100%;
+    height: 100%;
     object-fit: contain;
 }
 .portafolio-item .items-txt{
-    width: 100%;
+    width: 90%;
     text-align: center;
+    position: absolute;
+    top: 62%;
+}
+.portafolio-item .items-txt .items-txt-title{
+    font: 16px poppins-bold;
+    top: 65%;
+    letter-spacing: 0.5px;
     color: white;
-    font: 16px poppins-medium;
+}
+.portafolio-item .items-txt .items-txt-descrip{
+    color: white;
+    font: 14px poppins-regular;
+    text-align: start;
 }
 /* fin de Portafolio */
 
